# Wolf_cryptobot

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  pytest.ini  railway.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
anomaly/: __init__.py  entry.py  formatter.py  logger.py  ohlc.py  scanner.py  scoring.py  universe.py
benchmarks/: bench_indicator_cache.py
tests/: conftest.py  test_account.py  test_ai.py  test_anomaly_entry.py  test_anomaly_formatter.py  test_anomaly_logger.py  test_anomaly_ohlc.py  test_anomaly_scanner.py  test_anomaly_scoring.py  test_anomaly_universe.py  test_api.py  test_backtest_screener.py  test_commands.py  test_detectors.py  test_detectors_strategies.py  test_exchange.py  test_flow.py  test_flow_anomaly_integration.py  test_indicators.py  test_learning_backtest.py  test_learning_risk.py  test_market.py  test_news.py  test_regime_composite.py  test_reports.py  test_risk_plan.py  test_scheduler.py  test_screener.py  test_state_store.py  test_structure.py  test_telegram.py  test_tracker.py  test_universe.py
wolf/: __init__.py  account.py  analyze.py  app.py  config.py  indicator_cache.py  indicators.py  logging_setup.py  main.py  market.py  models.py  regime.py  regime_composite.py  risk_plan.py  scheduler.py  screener.py  structure.py  textfmt.py  tracker.py  universe.py
wolf/ai/: __init__.py  anthropic_client.py  base.py  debate.py  deepseek_client.py  openai_compat.py
wolf/api/: __init__.py  app.py
wolf/backtest/: __init__.py  engine.py
wolf/detectors/: __init__.py  base.py  momentum.py  (+5 more)
(+36 files in other folders)
